--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,19 +8,19 @@
   height: 100%;
 }
 
-.maxWidthHeight, #contact, #portfolio, #parallax, #about {
+.maxWidthHeight, #contact, #parallax, #about {
   max-width: 100vw;
   max-height: 100vh;
   height: 100vh;
 }
 
-.flex-center, #contact .social-media__effect__up, #contact .social-media__effect__down, #contact .social-media__effect, #contact .social-media, #portfolio .portfolio__card a, #portfolio .portfolio__text, .parallax-container .container-PP label, #about .about__container__image, #about .about__container__text, #about .about__container, .nav .nav-ul .nav-li .nav-link, .nav .nav-ul .nav-li, .nav .nav-ul {
+.flex-center, #contact .social-media__effect__up, #contact .social-media__effect__down, #contact .social-media__effect, #contact .social-media, #portfolio .portfolio__card__overlay__link a, #portfolio .portfolio__card__overlay__header, #portfolio .portfolio__text, .parallax-container .container-PP label, #about .about__container__image, #about .about__container__text, #about .about__container, .nav .nav-ul .nav-li .nav-link, .nav .nav-ul .nav-li, .nav .nav-ul {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.grid, #contact, #portfolio .portfolio__card, #portfolio .portfolio__container, #portfolio {
+.grid, #contact, #portfolio .portfolio__container {
   display: grid;
 }
 
@@ -162,16 +162,6 @@
   color: #5a2256;
   font-size: 3em;
 }
-@media (max-width: 800px) {
-  #about .about__container__text h1 {
-    font-size: 3em;
-  }
-}
-@media (max-width: 743px) {
-  #about .about__container__text h1 {
-    font-size: 3em;
-  }
-}
 #about .about__container__text__effect {
   position: relative;
   font-size: 1em;
@@ -247,7 +237,7 @@
     width: 100%;
   }
 }
-@media screen and (max-width: 600px) {
+@media (max-width: 600px) {
   #about .about__container {
     height: 100vh;
     flex-direction: column;
@@ -256,7 +246,7 @@
     width: 100%;
     height: 100%;
     padding-left: 0;
-    font-size: 1.5em;
+    font-size: 0.7em !important;
     justify-content: center;
   }
   #about .about__container__image {
@@ -372,114 +362,92 @@
   }
 }
 #portfolio {
+  width: 100%;
+  height: auto;
   background-color: #0E1B31;
-  grid-template-columns: 1fr 3fr;
-  grid-template-rows: 1fr;
-  gap: 10px;
+}
+#portfolio .portfolio__text {
+  height: 100px;
+  border-bottom-left-radius: 50%;
+  border-bottom-right-radius: 50%;
+  box-shadow: inset 0 -6px 10px -8px black, inset 0 6px 10px -8px black;
+  background-color: #102040;
+}
+@media (max-width: 600px) {
+  #portfolio .portfolio__text {
+    box-shadow: inset 0 -6px 10px -8px black, inset 0 0px 0px 0px black;
+  }
 }
 #portfolio .portfolio__tittle {
   color: #F2E18D;
   justify-self: center;
   align-self: center;
-  font-size: 2em;
-}
-#portfolio .portfolio__text {
-  height: 70%;
-  border-top-right-radius: 50%;
-  border-bottom-right-radius: 50%;
-  box-shadow: inset 0 -6px 10px -8px #244992, inset 0 6px 10px -8px #244992;
-  background-color: #102040;
-}
-@media (max-width: 600px) {
-  #portfolio .portfolio__text {
-    border-top-right-radius: 0;
-    border-bottom-left-radius: 50%;
-    box-shadow: inset 0 -6px 10px -8px #1a3469;
-  }
+  font-size: 3em;
 }
 #portfolio .portfolio__container {
-  width: 100%;
   height: 100%;
-  padding: 20px;
-  grid-template-rows: repeat(2, 1fr);
-  grid-template-columns: repeat(2, 1fr);
-  gap: 10px;
+  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+  gap: 30px;
+  margin: 50px 5vh;
+  padding-bottom: 30px;
 }
-#portfolio .portfolio__card {
-  opacity: 0.5;
-  grid-template-columns: 1fr;
-  grid-template-rows: 2fr 0.5fr 0.5fr;
-  gap: 10px;
-  padding: 10px;
-  cursor: pointer;
-  box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
-  border-radius: 20px;
-  background-color: rgba(255, 255, 255, 0.1);
-  border-top: 1px solid rgba(255, 255, 255, 0.5);
-  border-left: 1px solid rgba(255, 255, 255, 0.5);
-  transition: opacity 200ms;
-}
-@media (max-width: 930px) {
-  #portfolio .portfolio__card {
-    height: 300px;
+@media (max-width: 580px) {
+  #portfolio .portfolio__container {
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   }
 }
-#portfolio .portfolio__card .figure-1 {
-  width: 100%;
-  background: url("../image/GH/LS.png");
+#portfolio .portfolio__card {
+  position: relative;
+  display: block;
+  cursor: pointer;
+  height: 100%;
+  border-radius: 20px;
+  box-shadow: 0px 0px 10px 10px rgba(232, 130, 234, 0.1);
+  overflow: hidden;
 }
-#portfolio .portfolio__card .figure-2 {
-  background: url("../image/GH/LOSU.png");
+#portfolio .portfolio__card__overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  transform: translateY(100%);
+  transition: transform 0.2s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
-#portfolio .portfolio__card .figure-3 {
-  background: url("../image/GH/CF.png");
+#portfolio .portfolio__card__overlay__header {
+  padding: 10px;
+  color: #0E1B31;
+  border-radius: 20px 0 0 0;
+  transform: translateY(-100%);
+  background-color: #BF56B8;
+  transition: transform 0.2s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
-#portfolio .portfolio__card .figure-4 {
-  background: url("../image/GH/CC.png");
+#portfolio .portfolio__card__overlay__link {
+  background-color: #BF56B8;
+  padding: 0 5px 5px;
 }
-#portfolio .portfolio__card a {
+#portfolio .portfolio__card__overlay__link a {
+  gap: 10px;
   width: 100%;
   border-radius: 20px;
   transform: scale(0.7);
+  padding: 5px;
   background-color: white;
   transition: transform 200ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
-#portfolio .portfolio__card a i {
-  color: black;
+#portfolio .portfolio__card__overlay__link a i {
+  color: #0E1B31;
 }
-#portfolio .portfolio__card a:hover {
+#portfolio .portfolio__card__overlay__link a:hover {
   transform: scale(0.9);
 }
-#portfolio .portfolio__card__tittle {
-  align-self: center;
-  text-align: center;
-  color: #F2E18D;
+#portfolio .portfolio__card__figure img {
+  width: 100%;
+  height: auto;
 }
-#portfolio .portfolio__card:hover {
-  opacity: 1;
-}
-
-.image-config, #portfolio .portfolio__card .figure-1, #portfolio .portfolio__card .figure-2, #portfolio .portfolio__card .figure-3, #portfolio .portfolio__card .figure-4 {
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
+#portfolio .portfolio__card:hover .portfolio__card__overlay, #portfolio .portfolio__card:hover .portfolio__card__overlay__header {
+  transform: translateY(0);
 }
 
-@media (max-width: 600px) {
-  #portfolio {
-    grid-template-columns: 1fr;
-    grid-template-rows: 100px 2fr;
-  }
-  #portfolio .portfolio__tittle {
-    justify-self: center;
-    align-self: center;
-    font-size: 2em;
-  }
-  #portfolio .portfolio__card {
-    height: 300px;
-    align-self: flex-end;
-  }
-}
 .effectPosition, #contact .social-media__effect__up, #contact .social-media__effect__down {
   position: absolute;
   top: 0;
@@ -590,4 +558,3 @@ ul {
 }
 
 /*# sourceMappingURL=style.css.map */
-
