--- a/assets/sass/_portfolio.scss
+++ b/assets/sass/_portfolio.scss
@@ -4,18 +4,10 @@
     height: auto;
 
     background-color: $found-color;
-    
-    .portfolio__tittle {
-        color: $font2-color;
-        @extend .displayUpper;
-        justify-self: center;
-        align-self: center;
-        font-size: 2em;
-    }
 
-    .portfolio {
+    .portfolio { 
         &__text {
-            height: 70px;
+            height: 100px;
             @extend .flex-center;
 
             border-bottom-left-radius: 50%;
@@ -30,115 +22,103 @@
             }
         }
 
+        &__tittle {
+            color: $font2-color;
+            @extend .displayUpper;
+    
+            justify-self: center;
+            align-self: center;
+            font-size: 3em;
+        }
+
         &__container {
-            padding: 20px;
+            height: 100%;
+
+            @extend .grid; 
+            grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+            gap: 30px;
+
+            margin: 50px 5vh;
+            padding-bottom: 30px;
+
+            @media (max-width: 580px) {
+                grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            }
         }
 
         &__card {
-            margin-top: 10px;
-            opacity: .5;
-
-            @extend .grid;
-            grid-template-columns: 1fr;
-            grid-template-rows: 6fr .5fr 0.5fr;
-            gap: 10px;
-            padding: 10px;
-
+            position: relative;
+            display: block;
             cursor: pointer;
+            height: 100%;
 
-            box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
             border-radius: 20px;
-            background-color: rgba(255, 255, 255, 0.1);
-            border-top: 1px solid rgba(255, 255, 255, 0.5);
-            border-left: 1px solid rgba(255, 255, 255, 0.5);
 
-            transition: opacity 200ms;
+            box-shadow: 0px 0px 10px 10px rgba(232, 130, 234, 0.1);
 
-            @media (max-width: 930px) {
-                height: 300px;
-            }
+            overflow: hidden;
 
-            .figure-1 {
-                width: 100%;
-                background: url("../image/GH/LS.png");
-                @extend .image-config;
-                
-            }
-            .figure-2 {
-                background: url("../image/GH/LOSU.png");
-                @extend .image-config;
-                
-            }
-            .figure-3 {
-                background: url("../image/GH/CF.png");
-                @extend .image-config;
-                
-            }
-            .figure-4 {
-                background: url("../image/GH/CC.png");
-                @extend .image-config;
-                
-            }
+            &__overlay{
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                transform: translateY(100%);
+                transition: transform .2s cubic-bezier(0.68, -0.55, 0.265, 1.55);;
 
-            a {
-                @extend .flex-center;
-                width: 100%;
-                border-radius: 20px;
-                transform: scale(0.7);
+                &__header {
+                    @extend .flex-center;
 
-                background-color: white;
+                    padding: 10px;
+                    color: $found-color;
+                    border-radius: 20px 0 0 0;   
 
-                transition: transform 200ms cubic-bezier(0.68, -0.55, 0.265, 1.55);;
+                    transform: translateY(-100%);
 
-                i {
-                    color: black;
+                    background-color: $font-color;
+
+                    transition: transform .2s cubic-bezier(0.68, -0.55, 0.265, 1.55);;
                 }
 
-                &:hover {
-                    transform: scale(0.9);
+                &__link {
+                    background-color: $font-color;
+                    padding: 0 5px 5px;
+
+                    a {
+                        @extend .flex-center;
+                        gap: 10px;
+                        width: 100%;
+                        border-radius: 20px;
+                        transform: scale(0.7);
+        
+                        padding: 5px;
+
+                        background-color: white;
+        
+                        transition: transform 200ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+        
+                        i {
+                            color: $found-color;
+                        }
+        
+                        &:hover {
+                            transform: scale(0.9);
+                        }
+                    }
                 }
             }
 
-            &__tittle {
-                align-self: center;
-                text-align: center;
-                color: $font2-color;
+            &__figure {
+                img {
+                    width: 100%;
+                    height: auto;
+                }
             }
 
-            &:hover {
-                opacity: 1;
+            &:hover .portfolio__card__overlay, 
+            &:hover .portfolio__card__overlay__header {
+                transform: translateY(0);
             }
-        }
-    }
-}
-
-///////////////////////////////
-// Extends, YES YES YES.
-///////////////////////////////
-.image-config {
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
-///////////////////////////////
-// Responsive, YES YES YES.
-///////////////////////////////
-
-@media (max-width: 600px) {
-    #portfolio {
-        grid-template-columns: 1fr;
-        grid-template-rows: 100px 2fr;
-
-        .portfolio__tittle {
-            justify-self: center;
-            align-self: center;
-            font-size: 2em;
-        }
-
-        .portfolio__card {
-            height: 200px;
-            align-self: center;
         }
     }
 }
